# de_monorepo

./: README.md
airflow_101/: initialize_airflow.sh  pyproject.toml
airflow_101/airflow/: airflow.cfg  airflow.db
airflow_101/airflow/logs/scheduler/: latest
airflow_101/dags/: hello_world.py
