[tool.poetry]
name = "airflow-101"
version = "0.1.0"
description = ""
authors = ["Hasan Ozdemir <hasanozdemir1@trakya.edu.tr>"]
readme = "README.md"
packages = [{include = "airflow_101"}]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
